--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,9 @@
         "symfony/validator"     : "~2.2",
         "symfony/yaml"          : "~2.2",
         "twig/twig"             : "~1.10",
-        "twitter/bootstrap"     : "2.3.1"
+        "twitter/bootstrap"     : "2.3.1",
+        "solarium/solarium"     : "dev-develop",
+        "raveren/kint": "dev-master"
     },
     "require-dev": {
         "symfony/browser-kit"   : "~2.2",
