--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
     },
     "autoload": {
         "psr-0": {
-            "SKE": "src/"
+            "SKE": "src/",
+            "Drs": "src/"
         }
     }
 }
